[AIOTAL-379] myaccount ui fixes(styling and alignments)

--- a/src/app/shared/profile/profile.component.scss
+++ b/src/app/shared/profile/profile.component.scss
@@ -238,6 +238,9 @@ th,td{
     height: 0px !important;
 
 }
+.set_default{
+    margin-left : 15px
+}
 .updatepermbtn{
     border-radius: 20px;
     height: 30px;
